# openenv_regaudit

./: Dockerfile  README.md  inference.py  inference_runtime.py  openenv.yaml  pyproject.toml
api/: server.py
environment/: models.py
environment/graders/: patch_grader.py  severity_grader.py
environment/rules/: __init__.py  soc2_rules.py
environment/tasks/: task1_single_file.py  task3_microservices.py
openenv_regaudit/: .dockerignore  .gitignore  README.md  app.py  inference.py  main.py  openenv.yaml  requirements.txt  verify_lines.py
openenv_regaudit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
openenv_regaudit/api/: server.py
openenv_regaudit/environment/: env.py  models.py  reward.py
openenv_regaudit/environment/graders/: base_grader.py  patch_grader.py  severity_grader.py  violation_grader.py
openenv_regaudit/environment/rules/: gdpr_rules.py  owasp_rules.py
openenv_regaudit/environment/tasks/: task1_single_file.py  task2_django_app.py  task3_microservices.py
openenv_regaudit/graders/: __init__.py
openenv_regaudit/tasks/: __init__.py
openenv_regaudit/tests/: test_env.py
openenv_regaudit/tools/: oracle_check.py
server/: app.py
tests/: conftest.py  test_graders.py
tools/: oracle_check.py  run_human_baseline.py
