[project]
name = "regaudit-benchmark"
version = "0.1.0"
description = "RegAuditBench: Benchmark for AI agents in regulatory compliance auditing"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[tool.pytest.ini_options]
pythonpath = ["."]