[project]
name = "regaudit-benchmark"
version = "0.1.0"
description = "RegAuditBench"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.pytest.ini_options]
pythonpath = ["."]
